cabal-version:      3.0
name:               base-lang
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lucas Scharenbroch
maintainer:         lucasscharenbroch@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable base-lang
    import:           warnings
    main-is:          Main.hs
    other-modules:    Lex, Parse, Resolve, Typecheck, Gen, Ast
    build-depends:    base ^>=4.17.2.1,
                      parsec ^>= 3.1.14.0,
    hs-source-dirs:   src
    default-language: Haskell2010
